--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "pong",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "repository": "#",
+  "license": "UNLICENSED",
+  "scripts":
+  {
+    "dev": "vite serve --host",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies":
+  {
+    "lil-gui": "^0.16.1",
+    "stats.js": "^0.17.0",
+    "stylus": "^0.58.1",
+    "three": "^0.141.0",
+    "vite": "^2.9.12",
+    "vite-plugin-glsl": "^0.1.2"
+  }
 }
