--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "repository": "#",
-  "license": "UNLICENSED",
-  "scripts":
-  {
-    "dev": "vite serve --host",
-    "build": "vite build",
-    "preview": "vite preview"
+  "name": "threejs-journey-exercise",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
   },
-  "dependencies":
-  {
-    "lil-gui": "^0.16.1",
-    "stats.js": "^0.17.0",
-    "stylus": "^0.58.1",
-    "three": "^0.141.0",
-    "vite": "^2.9.12",
-    "vite-plugin-glsl": "^0.1.2"
+  "devDependencies": {
+    "vite": "^4.5.0"
+  },
+  "dependencies": {
+    "lil-gui": "^0.19.0",
+    "three": "^0.158.0"
   }
 }
