working on fetch request

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "lil-gui": "^0.19.0",
     "three": "^0.158.0",
     "vite-plugin-glsl": "^1.2.1"
